# handy_async

./: Cargo.toml  README.md
src/: buffer.rs  error.rs  future.rs  lib.rs  read.rs  sync_io.rs
src/async/: mod.rs  read.rs  read2.rs  write.rs
src/io/: async_read.rs  async_write.rs  common.rs  external_size.rs  misc.rs  mod.rs  read_pattern.rs  write_pattern.rs
src/io/read/: combinators.rs  mod.rs  primitives.rs
src/io/write/: combinators.rs  mod.rs  primitives.rs
src/matcher/: async_match.rs  match_tuple.rs  mod.rs
src/net/: mod.rs  tcp.rs
src/pattern/: async_match.rs  async_match_tuple.rs  combinators_impl.rs  mod.rs  read.rs  write.rs
src/read/: combinators.rs  mod.rs  primitives.rs
src/sync/: mod.rs  read.rs
src/write/: combinators.rs  mod.rs
