[package]
name = "handy_async"
version = "0.2.3"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "A handy library for describing asynchronous code declaratively"
documentation = "https://docs.rs/handy_async"
homepage = "https://github.com/sile/handy_async"
repository = "https://github.com/sile/handy_async"
readme = "README.md"
keywords = ["futures", "async", "io", "pattern"]
license = "MIT"

[dependencies]
futures = "0.1"
byteorder = "0.5"
