[package]
name = "handy_async"
version = "0.2.11"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "A handy library for describing asynchronous code declaratively"
documentation = "https://docs.rs/handy_async"
homepage = "https://github.com/sile/handy_async"
repository = "https://github.com/sile/handy_async"
readme = "README.md"
keywords = ["futures", "async", "io", "pattern"]
categories = ["asynchronous"]
license = "MIT"

[badges]
travis-ci = {repository = "sile/handy_async"}

[dependencies]
futures = "0.1"
byteorder = "1"
